[package]
name = "mule-lazy-migrate"
version = "0.1.3"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
xmltree = "0.10"
walkdir = "2.4"
log = "0.4"
env_logger = "0.10"
regex = "1.0"
colored = "2.0"

[dev-dependencies]
tempfile = "3.10"
